<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.socialmanager.fragments.CreateFragment">

    <EditText
        android:id="@+id/txtPost"
        android:layout_width="369dp"
        android:layout_height="145dp"
        android:layout_marginTop="24dp"
        android:ems="10"
        android:gravity="start|top"
        android:hint="@string/post_text"
        android:importantForAutofill="no"
        android:inputType="textMultiLine"
        android:maxLength="280"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnGetPhoto" />

    <Button
        android:id="@+id/btnPost"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/post"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/groupPostTypes" />

    <RadioGroup
        android:id="@+id/groupPostTypes"
        android:layout_width="259dp"
        android:layout_height="48dp"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="@+id/txtTypeOfPost"
        app:layout_constraintTop_toBottomOf="@+id/txtTypeOfPost">

        <RadioButton
            android:id="@+id/radioPost"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/post" />

        <RadioButton
            android:id="@+id/radioStory"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/story" />

    </RadioGroup>

    <CheckBox
        android:id="@+id/checkBoxTwitter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/twitter"
        app:layout_constraintStart_toStartOf="@+id/txtWhereToShare"
        app:layout_constraintTop_toBottomOf="@+id/txtWhereToShare" />

    <CheckBox
        android:id="@+id/checkBoxIg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/instagram"
        app:layout_constraintBaseline_toBaselineOf="@+id/checkBoxTwitter"
        app:layout_constraintStart_toEndOf="@+id/checkBoxTwitter" />

    <TextView
        android:id="@+id/txtWhereToShare"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/sharing_options"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="@+id/txtPost"
        app:layout_constraintTop_toBottomOf="@+id/txtPost" />

    <TextView
        android:id="@+id/txtTypeOfPost"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/type_of_post"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="@+id/checkBoxTwitter"
        app:layout_constraintTop_toBottomOf="@+id/checkBoxTwitter" />

    <TextView
        android:id="@+id/txtFilePath"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginRight="24dp"
        android:maxLines="2"
        android:text="@string/file_path"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnGetPhoto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/upload_photo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtFilePath" />

</androidx.constraintlayout.widget.ConstraintLayout>